--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/marcoDallas" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
-        <a href="https://www.marcodallalibera.it/" style="text-align:center;">www.marcodallalibera.it>
+        <p style="text-align:center;"><a href="https://www.marcodallalibera.it/">www.marcodallalibera.it</a></p>
         <hr>
         <section id="main_content">
         
